@@ -1,3 +1,12 @@
+2008-12-15  Albert Chu <chu11@llnl.gov>
+
+	* libfreeipmi/src/debug/ipmi-debug-kcs.c: New file.
+
+	* libfreeipmi/include/freeipmi/debug/ipmi-debug.h,
+	libfreeipmi/src/api/ipmi-api.c,
+	libfreeipmi/src/api/ipmi-kcs-interface-api.c: Support detailed KCS
+	debug output.
+	
 2008-12-12  Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/src/api/ipmi-lan-session-common.c
